# freeipa

./: .gitignore  configure.ac  freeipa.spec.in  pylint_plugins.py
.copr/: Makefile
daemons/: Makefile.am
daemons/globalcatalog/: Makefile.am  ipa-gcsyncd.in  ipa-gcsyncd.service.in
daemons/ipa-kdb/: ipa_kdb_mspac.c
daemons/ipa-sam/: ipa_sam.c
doc/designs/: index.rst
doc/designs/adtrust/: gc-design.md  ipa-gcsyncd-design.md
install/gc/: Makefile.am  convert-schema
install/tools/: ipa-adtrust-install.in
install/tools/man/: ipa-adtrust-install.1  ipa-server-certinstall.1  ipa-server-install.1
install/updates/: 20-syncrepl.update
ipaclient/install/: ipa_certupdate.py
ipalib/: constants.py
ipalib/install/: certmonger.py
ipaplatform/base/: paths.py  services.py
ipaplatform/redhat/: services.py
ipapython/: ipaldap.py
ipaserver/: dns_data_management.py  masters.py  servroles.py  setup.py
ipaserver/globalcatalog/: gcsyncer.py  transfo.py
ipaserver/globalcatalog/templates/: gc_fsp_template.tmpl  gc_group_template.tmpl  gc_user_template.tmpl
ipaserver/install/: gc.py  gcinstance.py  ipa_server_certinstall.py  ldapupdate.py  upgradeinstance.py
ipatests/: util.py
ipatests/prci_definitions/: gating.yaml  nightly_ipa-4-6.yaml  temp_commit.yaml
ipatests/test_integration/: base.py  test_cert.py  test_debug_resolvers.py  test_dnf.py  test_forced_client_reenrollment.py  test_global_catalog.py  test_installation.py  test_resolvers_manager.py  test_smb.py  test_sssd.py  test_trust.py  test_winsyncmigrate.py  windows_ui.py
(+14 files in other folders)
